# lc-data-api

./: README.md  mypy.ini  pyproject.toml
.github/workflows/: build.yml  deploy.yml
docs/resources/: docstring.mustache
lc_api/GetSummary/: function.json  get_summary.py
scripts/: mypy_plugin.py
tests/: test_lc_api.py
