[tool.poetry]
name = "lc-api"
version = "0.1.0"
description = "Log Cabin API"
authors = ["Finn Welsford-Ackroyd <finnwa24@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
azure-functions = "^1.7.0"
cabin = "^0.2.0"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^20.8b1"
pytest = "^6.2.3"
pytest-mock = "^3.5.1"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
